apps/control-center-cms/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: control-center-cms
  namespace: default
  labels:
    app: control-center-cms
spec:
  selector:
    app: control-center-cms
  ports:
    - name: http
      port: 80
      targetPort: http
