apps/control-center-cms/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: control-center-cms
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - cms.oracle.shdkej.com
      secretName: control-center-cms-tls
  rules:
    - host: cms.oracle.shdkej.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: control-center-cms
                port:
                  number: 80
